textures not reloaded #36639

Closed
opened 2013-09-02 13:26:26 +02:00 by Daniel Grauer · 4 comments
Member

%%%--- Operating System, Graphics card ---
os: windows 7 64bit
gpu: nvidia quadro k4000

- Blender version with error, and version that worked ---

error: official 2.68a

- Short description of error ---

when using "find missing files" to find missing textures, all the textures have to be reloaded manually (material textures) or the blend file needs to be saved and reopened for them to be loaded in the scene.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. open blend file to make sure the textures are loaded correctly
  2. close the blend file again
  3. move the textures to a different location
  4. load the blend file again and use the "external data>find missing files" and choose the new location of the textures
  5. now go into the material textures and notice that the texture preview is black which indicates that the texture is not loaded.
    %%%
%%%--- Operating System, Graphics card --- os: windows 7 64bit gpu: nvidia quadro k4000 - Blender version with error, and version that worked --- error: official 2.68a - Short description of error --- when using "find missing files" to find missing textures, all the textures have to be reloaded manually (material textures) or the blend file needs to be saved and reopened for them to be loaded in the scene. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. open blend file to make sure the textures are loaded correctly 2. close the blend file again 3. move the textures to a different location 4. load the blend file again and use the "external data>find missing files" and choose the new location of the textures 5. now go into the material textures and notice that the texture preview is black which indicates that the texture is not loaded. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Your reported issue has been fixed in SVN. Thanks for taking the
time to report!.%%%

%%%Your reported issue has been fixed in SVN. Thanks for taking the time to report!.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%I modified the fix for this bug in revision 60224, it should only reload when the path actually changes and it's not a packed file.%%%

%%%I modified the fix for this bug in revision 60224, it should only reload when the path actually changes and it's not a packed file.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36639
No description provided.